<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_queue_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="15dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:visibility="gone">

    <TextView
        android:id="@+id/tv_queue_num_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:ellipsize="middle"
        android:maxEms="8"
        android:singleLine="true"
        android:text="@string/moor_queue_num_left"
        android:textColor="@color/moor_color_999999"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_queue_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="1"
        android:textColor="@color/moor_color_999999"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_queue_num_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:ellipsize="middle"
        android:maxEms="8"
        android:singleLine="true"
        android:text="@string/moor_queue_num_right"
        android:textColor="@color/moor_color_999999"
        android:textSize="12sp" />

    <com.moor.imkf.demo.view.shadowlayout.MoorShadowLayout
        android:id="@+id/sl_cancel_queue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6.5dp"
        android:paddingLeft="7.5dp"
        android:paddingTop="5dp"
        android:paddingRight="7.5dp"
        android:paddingBottom="5dp"
        app:moor_cornerRadius="12.5dp"
        app:moor_layoutBackground="@color/moor_color_eeeeee"
        app:moor_strokeColor="@color/moor_color_dddddd"
        app:moor_strokeWith="0.5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_cancel_queue"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4.5dp"
                android:src="@drawable/moor_icon_cancel_queue" />

            <TextView
                android:id="@+id/tv_fast_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moor_cancel_queue"
                android:textColor="@color/moor_color_151515"
                android:textSize="10sp" />
        </LinearLayout>
    </com.moor.imkf.demo.view.shadowlayout.MoorShadowLayout>
</LinearLayout>