<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_title"
    android:layout_width="match_parent"
    android:layout_height="@dimen/moor_chat_titlebar_height">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <LinearLayout
            android:id="@+id/ll_chat_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/iv_chat_logout"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/moor_icon_back" />

            <TextView
                android:id="@+id/tv_chat_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:maxLines="1"
                android:text="@string/moor_logout"
                android:textColor="@color/moor_color_151515"
                android:textSize="14sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_chat_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginLeft="190dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/moor_color_151515"
            android:textSize="17sp"
            android:textStyle="bold" />


        <FrameLayout
            android:id="@+id/fl_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true">

            <LinearLayout
                android:id="@+id/ll_chat_convert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/iv_chat_convert"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/moor_icon_manual" />

                <TextView
                    android:id="@+id/tv_chat_convert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:maxLines="1"
                    android:text="@string/moor_to_artificial"
                    android:textColor="@color/moor_color_151515"
                    android:textSize="14sp"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_chat_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/iv_chat_close"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/moor_icon_finish" />

                <TextView
                    android:id="@+id/tv_chat_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:maxLines="1"
                    android:text="@string/moor_chat_close"
                    android:textColor="@color/moor_color_151515"
                    android:textSize="14sp"
                    android:visibility="gone" />
            </LinearLayout>
        </FrameLayout>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_alignParentBottom="true"
        android:alpha="0.5"
        android:background="@color/moor_color_dddddd" />
</RelativeLayout>